# ruz-server

./: .dockerignore  .env.example  .gitignore  AGENTS.md  API_DOCUMENTATION.md  Dockerfile  Makefile  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt
alembic/: env.py  script.py.mako
alembic/versions/: 20260416_0001_initial_schema.py  20260416_0002_users_subgroup_nullable.py
docs/: api.md
docs/endpoints/: auditoriums.md  disciplines.md  groups.md  kind_of_work.md  lecturers.md  lessons.md  schedule.md  search.md  users.md
src/: main.py
src/api/: __init__.py  api.py  app.py  auditorium.py  discipline.py  groups.py  kind_of_work.py  lecturers.py  lesson.py  security.py  users.py
src/database/: __init__.py  database.py
src/db/: db.py
src/helpers/: api_helpers.py
src/logging_config/: __init__.py  logging_config.py
src/models/: __init__.py  models.py
src/repositories/: __init__.py  auditorium_repository.py  discipline_repository.py  group_repository.py  kind_of_work_repository.py  lecturer_repository.py  lesson_group_repository.py  lesson_repository.py  user_repository.py
src/ruz_api/: __init__.py  api.py
src/ruz_server/: main.py
src/ruz_server/api/: __init__.py  app.py  auditorium.py  discipline.py  groups.py  kind_of_work.py  lecturers.py  lesson.py  refresh.py  schedule.py  search.py  security.py  users.py
src/ruz_server/database/: __init__.py  database.py  models_registry.py
src/ruz_server/helpers/: api_helpers.py  group_faculty.py  refresh_helper.py  ruz_mapper.py
src/ruz_server/logging_config/: __init__.py  logging_config.py
src/ruz_server/models/: __init__.py  models.py
src/ruz_server/repositories/: __init__.py  auditorium_repository.py  discipline_repository.py  group_repository.py  kind_of_work_repository.py  lecturer_repository.py  lesson_group_repository.py  lesson_repository.py  user_repository.py
src/ruz_server/ruz_api/: __init__.py  api.py  group_search.py
src/ruz_server/services/: __init__.py  refresh_scheduler.py
src/ruz_server/settings/: __init__.py  settings.py
src/ruzserver/: __init__.py  __main__.py
src/settings/: __init__.py  settings.py
src/utils/: __init__.py  daters.py
tests/: README.md  conftest.py  pytest.ini  test_alembic_migrations.py  test_infrastructure.py  test_models.py  test_secret_masking_in_logs.py
tests/api/: test_app.py  test_auditorium.py  test_discipline.py  test_groups.py  test_kind_of_work.py  test_lecturers.py  test_lesson.py  test_lesson_import_from_ruz_json.py  test_lesson_parse_endpoint.py  test_refresh_lifecycle.py  test_router_registration.py  test_schedule.py  test_search.py  test_security.py  test_users.py
tests/fixtures/ruz/: example.lab.json  example.lection.json  example.multiple.json  example.practice.json
tests/helpers/: __init__.py  test_api_helpers.py  test_group_faculty.py  test_ruz_mapper.py
tests/repositories/: __init__.py  conftest.py  test_auditorium_repository.py  test_discipline_repository.py  test_group_repository.py  test_kind_of_work_repository.py  test_lecturer_repository.py  test_lesson_group_repository.py  test_lesson_repository.py  test_lesson_repository_search_filters.py  test_user_repository.py
tests/ruz_api/: test_api.py
tests/services/: test_refresh_scheduler.py
tests/support/: pg_alembic_smoke_child.py
