[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings"
]
markers = [
    "repositories: marks tests for repository layer",
    "api: marks tests for API layer",
    "helpers: marks tests for helper functions",
    "models: marks tests for models layer",
    "ruzapi: marks tests for ruz_api layer",
    "integration: marks integration tests",
    "unit: marks unit tests",
    "slow: marks tests as slow"
]

[tool.coverage.report]
fail_under = 70
show_missing = true

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "ruz-server"
version = "1.0.1"
description = "RUZ Server API"
dependencies = [
    "aiohttp==3.12.15",
    "apscheduler",
    "annotated-types==0.7.0",
    "anyio==4.6.0",
    "click==8.1.7",
    "colorama==0.4.6",
    "exceptiongroup==1.2.2",
    "fastapi==0.135.2",
    "h11==0.14.0",
    "httptools==0.6.1",
    "idna==3.10",
    "psycopg2==2.9.9",
    "pydantic==2.9.2",
    "pydantic-settings==2.6.1",
    "pydantic_core==2.23.4",
    "python-dotenv==1.0.1",
    "PyYAML==6.0.2",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.41",
    "sqlmodel==0.0.24",
    "starlette==1.0.0",
    "typing_extensions==4.12.2",
    "uvicorn==0.30.6",
    "watchfiles==0.24.0",
    "websockets==13.1",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]
dev = [
    "ruff==0.15.10",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F"]
